Bug 692320 - Error: /typecheck in --dict--
Summary: Error: /typecheck in --dict--
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Interpreter (show other bugs)
Version: master
Hardware: PC Windows 7
: P4 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-01 00:54 UTC by jacky
Modified: 2011-07-06 02:05 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
could not open the file (485.95 KB, application/pdf)
2011-07-01 00:54 UTC, jacky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jacky 2011-07-01 00:54:11 UTC
Created attachment 7638 [details]
could not open the file 

GSview 4.91beta 2010-06-03
GPL Ghostscript 9.02 (2011-03-30)
Copyright (C) 2010 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Scanning PDF file
   **** Warning: File has a corrupted %%EOF marker, or garbage after %%EOF.
Error: /typecheck in --dict--
Operand stack:
   PageNumbers   32.0
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--   --nostringval--   2   %stopped_push   --nostringval--   --nostringval--   false   1   %stopped_push   1910   1   3   %oparray_pop   1909   1   3   %oparray_pop   1893   1   3   %oparray_pop   1787   1   3   %oparray_pop   --nostringval--   %errorexec_pop   .runexec2   --nostringval--   --nostringval--   --nostringval--   2   %stopped_push   --nostringval--   --nostringval--   --nostringval--
Dictionary stack:
   --dict:1164/1684(ro)(G)--   --dict:1/20(G)--   --dict:86/200(L)--   --dict:108/127(ro)(G)--   --dict:295/300(ro)(G)--   --dict:20/30(L)--
Current allocation mode is local
Comment 1 Alex Cherepanov 2011-07-01 04:59:23 UTC
There are several problems with the file.
1. The file has some junk data after %%EOF. Ghostscript finds %%EOF anyway.
2. The file uses floating point number for the page count. A work-around
   is trivial.
3. An embedded Korean font cannot be found after it is defined. I don't know
   yet whether it is a bug in Ghostscript or the file.
Comment 2 Alex Cherepanov 2011-07-01 22:44:33 UTC
A work around for incorrect type of the page count is added by the
following commit.

http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=c841237f86505fad348295dfb17aea45beed4c89

Actually, the CID font is not embedded.
The fonts must be installed separately to make this file readable by Ghostscript.
Comment 3 jacky 2011-07-06 02:05:20 UTC
(In reply to comment #1)
> There are several problems with the file.
> 1. The file has some junk data after %%EOF. Ghostscript finds %%EOF anyway.
> 2. The file uses floating point number for the page count. A work-around
>    is trivial.
> 3. An embedded Korean font cannot be found after it is defined. I don't know
>    yet whether it is a bug in Ghostscript or the file.

Thank you very much!